--- a/postcss/package.json
+++ b/postcss/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^9.4.7",
+    "postcss-apply": "^0.12.0",
     "postcss-cli": "^6.1.1",
     "postcss-preset-env": "^6.6.0"
   },
