--- a/postcss/package.json
+++ b/postcss/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^9.4.7",
     "postcss-apply": "^0.12.0",
     "postcss-cli": "^6.1.1",
+    "postcss-custom-media": "^7.0.7",
     "postcss-preset-env": "^6.6.0"
   },
   "devDependencies": {},
