--- a/postcss/package.json
+++ b/postcss/package.json
@@ -12,6 +12,7 @@
     "postcss-apply": "^0.12.0",
     "postcss-cli": "^6.1.1",
     "postcss-custom-media": "^7.0.7",
+    "postcss-image-set": "^1.0.0",
     "postcss-preset-env": "^6.6.0"
   },
   "devDependencies": {},
