--- a/postcss/package.json
+++ b/postcss/package.json
@@ -11,10 +11,13 @@
     "autoprefixer": "^9.4.7",
     "postcss-apply": "^0.12.0",
     "postcss-cli": "^6.1.1",
+    "postcss-color-hwb": "^3.0.0",
     "postcss-custom-media": "^7.0.7",
     "postcss-image-set": "^1.0.0",
     "postcss-preset-env": "^6.6.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "postcss-color-mod-function": "^3.0.3"
+  },
   "description": ""
 }
