--- a/postcss/package.json
+++ b/postcss/package.json
@@ -15,6 +15,7 @@
     "postcss-custom-media": "^7.0.7",
     "postcss-custom-selectors": "^5.1.2",
     "postcss-image-set": "^1.0.0",
+    "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.6.0"
   },
   "devDependencies": {
