fix to font magician and css-mqpacker for media queries in the same mq

--- a/postcss/package.json
+++ b/postcss/package.json
@@ -20,6 +20,7 @@
     "postcss-preset-env": "^6.6.0"
   },
   "devDependencies": {
+    "css-mqpacker": "^7.0.0",
     "postcss-color-mod-function": "^3.0.3",
     "stylelint": "^9.10.1"
   },
